spade-tests/src/snapshots/spade_tests__ast_lowering__single_use_multiple_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct A {}
use A;


error: Multiple items with the same name
  ┌─ testinput:2:5
  │
1 │ struct A {}
  │ ----------- Previous definition here
2 │ use A;
  │     ^ A is defined multiple times
